--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/default.css" />
+  </head>
+  <body>
+    <div class="main-header">
+      <h1>Hello! This is My website for WEB140</h1>
+    </div>
+    <div class="rest-of-body">
+      <h2>Shishant Bohora</h2>
+    </div>
+    <footer>
+      <a href="http://validator.w3.org/check?uri=referer">
+        <img
+          style="border-style: none"
+          width="90"
+          height="35"
+          src="https://upload.wikimedia.org/wikipedia/commons/b/bb/W3C_HTML5_certified.png"
+          alt="Validate HTMl"
+        />
+      </a>
+      <a href="http://jigsaw.w3.org/css-validator/check/referer">
+        <img
+          style="border-style: none"
+          width="38"
+          height="31"
+          src="https://sparksuite.github.io/w3c-css-validator/img/logo.png"
+          alt="Validate CSS"
+      /></a>
+    </footer>
+  </body>
+</html>
