--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h2>Shishant Bohora</h2>
     </div>
     <footer>
-      <a href="http://validator.w3.org/check?uri=referer">
+      <a href="http://validator.w3.org/check?uri=https://shishantg87.github.io/web140">
         <img
           style="border-style: none"
           width="90"
@@ -23,7 +23,7 @@
           alt="Validate HTMl"
         />
       </a>
-      <a href="http://jigsaw.w3.org/css-validator/check/referer">
+      <a href="http://jigsaw.w3.org/css-validator/check?uri=https://shishantg87.github.io/web140">
         <img
           style="border-style: none"
           width="38"
