--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           alt="Validate HTMl"
         />
       </a>
-      <a href="http://jigsaw.w3.org/css-validator/check?uri=https://shishantg87.github.io/web140">
+      <a href="https://jigsaw.w3.org/css-validator/check?uri=https://shishantg87.github.io/web140">
         <img
           style="border-style: none"
           width="38"
